# reify-core

./: README.md  reify-core.cabal  to-do.md
src/: .ghci
src/ReifyCore/: Interactive.hs  Lambda.hs  Misc.hs  Plugin.hs  Reify.hs  ShowUtils.hs
test/: Makefile  Tests.hs  prep.hss  recipe.hss  settings.hss
