Name:                reify-core
Version:             0.0.0
Cabal-Version:       >= 1.6
Synopsis:            
Category:            GHC Plugin
Description:
  Reify GHC Core into a GADT for further processing
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2016 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/reify-core.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5
                     , ghc >= 7.10.3, ghc-prim
                     , containers
                     , kure, hermit >= 1.0.0.1
                     , hermit-extras >= 0.4.0
                     , ty >= 0.1.5
                     , circat
                     , monomorph
  Exposed-Modules:  ReifyCore.Misc
                    ReifyCore.ShowUtils
                    ReifyCore.Lambda
                    ReifyCore.Reify
                    ReifyCore.Interactive
                    ReifyCore.Plugin
                       
  ghc-options:         -Wall
